Fix gala controls separation, Google auth fallback, page speed, ticket verification, and backend warnings